# clang-tidy-mistakes

./: .gitignore  CMakeLists.txt  Makefile  README.md
false-negative/: buffer-overrun.cpp  const-assignment-fix.cpp  const-assignment.cpp  data-execution.cpp  destructor-exception-fix.cpp  destructor-exception.cpp  duplicated-delete.cpp  float-loop.cpp  function-cast.cpp  global-null-fix.cpp  global-null.cpp  infinite-recursion.cpp  inifite-goto.cpp  memcpy-buffer-overrun.cpp  memcpy_buffer_overrun.cpp  noexcept-crash-fix.cpp  noexcept-crash.cpp  stack-corruption.cpp  thread-invalid-stack.cpp  thread-recursion.cpp  unhandled-exception-fix.cpp  unhandled-exception.cpp  virtual-call-constructor.cpp  virtual-div-by-zero.cpp
src/: dependency-loop.cpp  long-loop.c  null-escaping.cpp
